Bug 495787 - Application menu positioning is incorrect even with only a single screen
Summary: Application menu positioning is incorrect even with only a single screen
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: appmenu (other bugs)
Version First Reported In: 6.2.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 495794 496574 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-11-04 11:56 UTC by slaecker
Modified: 2024-12-13 10:09 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.5
Sentry Crash Report:


Attachments
Application menu position off (102.34 KB, image/png)
2024-11-04 11:56 UTC, slaecker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description slaecker 2024-11-04 11:56:33 UTC
Created attachment 175512 [details]
Application menu position off

SUMMARY
Clicking the application menu on a window title bar opens it on a weird position, far away from the actual icon. Sometimes it's even outside the window.

STEPS TO REPRODUCE
1. Configure application menu to be shown in window title bars.
2. Click the application icon.

OBSERVED RESULT
Application menu placement is off.

EXPECTED RESULT
Application menu should appear next to the icon.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.11.5-zen1-1-zen (64-bit)
KDE Plasma Version: 6.2.2
KDE Frameworks Version: 6.7.0
Qt Version: 6.8.0

ADDITIONAL INFORMATION
-
Comment 1 Balint Toth 2024-11-10 15:41:45 UTC
I have the same issue (only when using wayland session).

KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.7.0
Qt Version: 6.8.0
Graphics Platform: Wayland
Graphics Processor: AMD Radeon Graphics
Comment 2 Nate Graham 2024-11-25 20:55:23 UTC
Do you have multiple screens? If so, this is Bug 413771.
Comment 3 slaecker 2024-11-26 07:23:43 UTC
(In reply to Nate Graham from comment #2)
> Do you have multiple screens? If so, this is Bug 413771.

My system is running on a Framework Laptop 12th Gen (resolution 2256x1504; 3:2, 125% scaling). I experience the issue both while connected to my external 34" ultrawide monitor (3440x1440; 100% scaling) and while using the laptop screen only.
Comment 4 Nate Graham 2024-11-26 21:28:52 UTC
*** Bug 496574 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2024-11-26 21:28:56 UTC
*** Bug 495794 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2024-11-27 21:00:13 UTC
*** Bug 495794 has been marked as a duplicate of this bug. ***
Comment 7 Bug Janitor Service 2024-12-13 08:55:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4996
Comment 8 David Redondo 2024-12-13 09:36:19 UTC
Git commit 60afd71eb1ca97608f4af0f98dac9712cbe2b883 by David Redondo.
Committed on 13/12/2024 at 09:10.
Pushed by davidre into branch 'master'.

appmenu: Avoid repositioning the menu on wayland

Qt 6.8 added support for respotioning popups. When menuUpdated is
emitted twice for the same menu we would go into the else branch and
accidentally move the menu.
FIXED-IN:6.2.5

M  +22   -20   appmenu/appmenu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/60afd71eb1ca97608f4af0f98dac9712cbe2b883
Comment 9 David Redondo 2024-12-13 10:09:35 UTC
Git commit 8609d78f1ac63a88d309eaa73af12b1eed4ac914 by David Redondo.
Committed on 13/12/2024 at 09:37.
Pushed by davidre into branch 'Plasma/6.2'.

appmenu: Avoid repositioning the menu on wayland

Qt 6.8 added support for respotioning popups. When menuUpdated is
emitted twice for the same menu we would go into the else branch and
accidentally move the menu.
FIXED-IN:6.2.5


(cherry picked from commit 60afd71eb1ca97608f4af0f98dac9712cbe2b883)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +22   -20   appmenu/appmenu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8609d78f1ac63a88d309eaa73af12b1eed4ac914