appmenu: Avoid repositioning the menu on wayland

Qt 6.8 added support for respotioning popups. When menuUpdated is
emitted twice for the same menu we would go into the else branch and
accidentally move the menu.
BUG:495787
FIXED-IN:6.2.5


(cherry picked from commit 60afd71eb1ca97608f4af0f98dac9712cbe2b883)

Co-authored-by: David Redondo <kde@david-redondo.de>